--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,21 @@
 {
-  
-  "Authentication": {
-    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
-    "JwtExpireDays": 15,
-    "JwtIssuer": "http//taskswebapi.com"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
 
-}
+  "ConnectionStrings": {
+    "ConnStr": "Server=.\\SQLEXPRESS;Database=Tasks;User Id=Togal;Password=1234;"
+  },
+
+    "Authentication": {
+      "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+      "JwtExpireDays": 15,
+      "JwtIssuer": "http//taskswebapi.com"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+
+  }
